# stock-prediction-cloud

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py  schemas.py  service.py
common/: __init__.py  config.py  io_utils.py  path_utils.py  spark_utils.py
configs/: settings.yaml
dashboard/: __init__.py  app.py  data_loader.py  report.py
docs/: architecture.md  databricks_free_tier_cells.md  databricks_setup.md
etl/: __init__.py  pipeline.py  transform.py
ingestion/: __init__.py  pipeline.py  yahoo_finance_client.py
jobs/: databricks_workflow.json
model/: __init__.py  train.py
notebooks/: 01_ingestion_databricks.py  02_etl_databricks.py  03_train_databricks.py  04_dashboard_databricks.py  99_free_tier_end_to_end.py
scripts/: run_local_pipeline.py
